# protonet

./: .gitignore  config.yaml  data.py  loss.py  main.py  model.py  pyproject.toml  test.py  train.py  utils.py
ckpt/: best_model.pth  checkpoint_100.pth  checkpoint_40.pth  checkpoint_60.pth  checkpoint_80.pth
data/split/: test.txt  train.txt  trainval.txt  val.txt
