[tool.poetry]
name = "protonet"
version = "0.1.0"
description = ""
authors = ["Lee Joonhun <jhlee63@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
black = "^22.3.0"
torch = "^1.11.0"
numpy = "^1.22.4"
torchvision = "^0.12.0"
opencv-python = "^4.5.5"
tqdm = "^4.64.0"
scipy = "^1.8.1"
albumentations = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
